Review of generated tests